tests/ui/never_type/defaulted-never-note.fallback.stderr
error[E0277]: the trait bound `!: ImplementedForUnitButNotNever` is not satisfied
  --> $DIR/defaulted-never-note.rs:32:9
   |
LL |     foo(_x);
   |     --- ^^ the trait `ImplementedForUnitButNotNever` is not implemented for `!`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `ImplementedForUnitButNotNever` is implemented for `()`
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #48950 <https://github.com/rust-lang/rust/issues/48950> for more information)
   = help: you might have intended to use the type `()` here instead
note: required by a bound in `foo`
  --> $DIR/defaulted-never-note.rs:25:11
   |
LL | fn foo<T: ImplementedForUnitButNotNever>(_t: T) {}
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
